pussing lession 2 in phase4

--- a/phase-4/lession-2/practice3.html
+++ b/phase-4/lession-2/practice3.html
@@ -12,6 +12,7 @@
                   }
             })(6);
 
+          
             // A callback function is a function that is passed as an argument to another function. 
 
             function School(name, opentime, callback, endtime){
@@ -37,6 +38,9 @@
       </script>
 </head>
 <body>
-      
+      <h1>Value:-<i id="value"></i> </h1>
+      <button id="valueup">Value Up</button>
+      <button id="valuedown">Value down</button>
+
 </body>
 </html>
